// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overflowClip renders 0 1`] = `
Array [
  .c0 {
  overflow-clip: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowClip renders function 1`] = `
Array [
  .c0 {
  overflow-clip: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: has;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: has;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowClip renders invalid theme path 1`] = `
Array [
  .c0 {
  overflow-clip: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowClip renders negative number 1`] = `
Array [
  .c0 {
  overflow-clip: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowClip renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    overflow-clip: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-clip: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    overflow-clip: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-clip: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-clip: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-clip: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-clip: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowClip renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    overflow-clip: July;
  }
}

@media April {
  .c0 {
    overflow-clip: August;
  }
}

@media January {
  .c0 {
    overflow-clip: September;
  }
}

@media April {
  .c0 {
    overflow-clip: November;
  }
}

@media June {
  .c0 {
    overflow-clip: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    overflow-clip: July;
  }
}

@media April {
  .c0 {
    overflow-clip: August;
  }
}

@media January {
  .c0 {
    overflow-clip: September;
  }
}

@media April {
  .c0 {
    overflow-clip: November;
  }
}

@media June {
  .c0 {
    overflow-clip: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-clip: January;
  }
}

@media April {
  .c0 {
    overflow-clip: December;
  }
}

@media January {
  .c0 {
    overflow-clip: April;
  }
}

@media April {
  .c0 {
    overflow-clip: May;
  }
}

@media June {
  .c0 {
    overflow-clip: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-clip: January;
  }
}

@media April {
  .c0 {
    overflow-clip: December;
  }
}

@media January {
  .c0 {
    overflow-clip: April;
  }
}

@media April {
  .c0 {
    overflow-clip: May;
  }
}

@media June {
  .c0 {
    overflow-clip: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowClip renders postitive number 1`] = `
Array [
  .c0 {
  overflow-clip: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowClip renders string 1`] = `
Array [
  .c0 {
  overflow-clip: July;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: July;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: June;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: June;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowClip renders valid theme path 1`] = `
Array [
  .c0 {
  overflow-clip: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-clip: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
